--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -2,42 +2,38 @@ name: Build-sphinx-docs
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
   pull_request:
-    branches: [master]
+    branches: [ master ]
+
   workflow_dispatch:
 
-jobs:
-  build:
+jobs: 
+  build: 
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
-
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v4
-        with:
-          node-version: '16.x'
+           python-version: "3.10"
 
       - name: Run a one-line script
         run: echo Hello, world!
-
+        
       - name: Install dependencies
         run: | 
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Build HTML
         run: | 
           cd docs/
           make html
-
+      
       - name: Run ghp-import
         run: | 
           ghp-import -n -p -f docs/_build/html
